# TitanShare

./: .gitignore  CMakeLists.txt  README.md
config/: bybridge.conf  titanshare.conf
src/: config.hpp  main.cpp
src/auth/: session_manager.cpp  session_manager.hpp
src/commands/: command_dispatcher.cpp  command_dispatcher.hpp  lock_commands.cpp  lock_commands.hpp  power_commands.cpp  power_commands.hpp  system_info.cpp  system_info.hpp  volume_commands.cpp  volume_commands.hpp
src/discovery/: mdns_advertiser.cpp  mdns_advertiser.hpp
src/file_transfer/: file_receiver.cpp  file_receiver.hpp
src/input/: virtual_input.cpp  virtual_input.hpp
src/notifications/: notification_bridge.cpp  notification_bridge.hpp
src/qr/: qr_generator.cpp  qr_generator.hpp
src/server/: client_session.cpp  client_session.hpp  tcp_server.cpp  tcp_server.hpp
src/utils/: logger.cpp  logger.hpp  network.cpp  network.hpp  process.cpp  process.hpp
src_gui/: main.cpp  titanshare_gui.qrc
src_gui/qml/: Main.qml
src_gui/qml/components/: PairingView.qml  QRCodeView.qml
systemd/: bybridge.service  titanshare.service
